Updated the Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,6 +11,7 @@ COPY . /app
 RUN pip install --extra-index-url https://pypi.pinecone.io/ --trusted-host pypi.pinecone.io pinecone-client
 
 # Install any needed packages specified in requirements.txt
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Make port 8080 available to the world outside this container
